--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="textView_URL_Text">URL:</string>
 	<string name="editText_URL_Hint">Nagios Status</string>
     <string name="button_widget_Refresh">R</string>
+    <string name="textView_Conclusion_Filter">Selected Filters:</string>
 	
     <!-- Widget -->
     <string name="imageButton_Widget_Refresh_ContentDescription">Refresh</string>
