--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,8 @@
     
     <!-- WidgetConfigure_Server -->
     <string name="button_check_Text">Check</string>
+    <string name="textView_Host">Hostname:</string>
+    <string name="editText_Host">Host</string>
     <string name="textView_URL_Text">URL:</string>
 	<string name="editText_URL_Hint">Nagios Status</string>
     <string name="button_widget_Refresh">R</string>
