--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,16 @@
     <string name="imageButton_Widget_Refresh_ContentDescription">Refresh</string>
     <string name="textView_Empty_Text">No status updates found </string>
     
+    <!-- FileDialog -->
+    <string name="location">Location</string>
+    <string name="cant_read_folder">folder can\'t be read!</string>
+    <string name="nnew">New</string>
+    <string name="select">Select</string>
+    <string name="file_name">File name:</string>
+    <string name="cancel">Cancel</string>
+    <string name="create">Save</string>
+    <string name="no_data">No Data</string>
+    <color name="gray">#ffff0000</color>
+    <string name="err">Error</string>
+    
 </resources>
